# parallel-heat-solver

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
benchmarks/: bench_scaling.cpp
include/heat/: domain.hpp  fd_solver.hpp  types.hpp
output_mpi/: metadata.txt
output_test/: metadata.txt
output_tps/: metadata.txt
scripts/: scaling_analysis.py  validate_tps.py  visualise.py
src/mpi/: domain_decomp.cpp  fd_solver_mpi.cpp  halo_exchange.cpp  main_mpi.cpp
src/openmp/: fd_solver_omp.cpp  main.cpp
src/serial/: fd_solver.cpp  main.cpp
